--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Read the RGB value of colors under the sensor. Example code and docume
 category=Sensors
 url=https://github.com/MajicDesign/TCS230
 architectures=*
+includes=MD_TCS230.h,FreqCount.h
