Updated homepage URL

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=marco_c <8136821@gmail.com>
 sentence=Library for TCS230 TCS3200 Colour Sensor
 paragraph=Read the RGB value of colors under the sensor. Example code and documentation shows how to calibrate the sensor.
 category=Sensors
-url=https://github.com/MajicDesign/TCS230
+url=https://github.com/MajicDesign/MD_TCS230
 architectures=*
 includes=MD_TCS230.h,FreqCount.h
